# libplist_facebook

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
PrivateHeaders/plist/Format/: BaseXMLParser.h
Sources/: Boolean.cpp
Sources/Format/: BaseXMLParser.cpp
Tools/: PlistBuddy.cpp  plutil.cpp
Util/: Absolute.cpp  Absolute.h  DefaultFilesystem.cpp  DefaultFilesystem.h  FSUtil.cpp  FSUtil.h  Filesystem.cpp  Filesystem.h  Options.cpp  Options.h  Permissions.cpp  Relative.cpp  Relative.h  Unix.cpp  Windows.cpp
